--- a/weather.js/css/main.css
+++ b/weather.js/css/main.css
@@ -2,11 +2,18 @@
 
 
 body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    row-gap: 50px;
+
     font-family: 'Rubik', sans-serif;
+    color: #000;
 }
 /* Header*/
 
 .header {
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -43,8 +50,6 @@ body {
     font-size: 20px;
     font-weight: 300;
     line-height: 1;
-
-    color: #030303;
 }
 
 .btn {
@@ -66,8 +71,83 @@ body {
 }
 
 /* Card*/
+.card {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    row-gap: 20px;
+
+    padding: 30px 30px;
+    width: 360px;
+
+    background-color: #FFF;
+    border-radius: 6px;
+    background: #FFF;
+    box-shadow: 0px 5px 25px 0px rgba(43, 77, 80, 0.20);
+}
+
+.card::before {
+    content: "";
+
+    position: absolute;
+    left: 10px;
+    bottom: -10px;
+    z-index: -1;
+  
+    width: calc(100% - 20px);
+    height: 100%;
+
+    background: #FFF;
+    box-shadow: 0px 5px 25px 0px rgba(43, 77, 80, 0.20);
+    border-radius: 6px;
+}
+
+.card__city {
+    margin-bottom: 20px;
+    font-size: 28px;
+    font-weight: 500;
+    line-height: 1.17;
+}
+
+.card__city span {
+    display: inline-block;
+    vertical-align: text-top;
+    
+    padding: 3px 5px;
+    border-radius: 6px;
+    background: #E7464F;
+
+    font-size: 12px;
+    font-weight: 500;
+    line-height: 1;
+    color: #FFF;
+}
+
+.card__weather {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.card__value {
+    font-size: 92px;
+    font-weight: 400;
+    line-height: 1;
+}
+
+.card__value sup {
+    font-size: 50%;
+}
 
 .card__img {
-    height: 120px;
-    width: 120px;
+    height: 104px;
+    width: 108px;
 }
+
+
+.card__discription {
+    font-size: 20px;
+    font-weight: 400;
+    line-height: 1.2;
+}
+
