--- a/weather.js/css/main.css
+++ b/weather.js/css/main.css
@@ -1,6 +1,10 @@
 @import "./reset.css";
 
 
+html, body {
+    min-height: 100vh;
+}
+
 body {
     display: flex;
     flex-direction: column;
@@ -150,4 +154,22 @@ body {
     font-weight: 400;
     line-height: 1.2;
 }
+/* Footer */
 
+.footer {
+    padding: 8px 15px;
+    margin-top: auto;
+    width: 100%;
+    background: rgba(165, 223, 214, 0.41);
+    border-radius: 6px;
+
+    font-size: 14px;
+    line-height: 1;
+    font-weight: 500;
+    text-align: center;
+}
+
+.footer a {
+    color: rgba(100, 122, 138, 0.68);
+    text-decoration: none;
+}
