--- a/weather.js/css/main.css
+++ b/weather.js/css/main.css
@@ -115,6 +115,7 @@ body {
 
 .card__city span {
     display: inline-block;
+    margin-left: 10px;
     vertical-align: text-top;
     
     padding: 3px 5px;
