--- a/weather.js/css/main.css
+++ b/weather.js/css/main.css
@@ -82,7 +82,7 @@ body {
     row-gap: 20px;
 
     padding: 30px 30px;
-    width: 360px;
+    width: 380px;
 
     background-color: #FFF;
     border-radius: 6px;
@@ -145,8 +145,9 @@ body {
 }
 
 .card__img {
-    height: 104px;
-    width: 108px;
+    height: 120px;
+    width: 120px;
+    object-fit: contain;
 }
 
 
